# template-streamlit

./: .black-config.toml  .dockerignore  .gitignore  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  README.md  Taskfile.yaml  activate.sh  coverage_report.sh  docker-compose.yaml  pyproject.toml
.streamlit/: config.toml
.taskfiles/: app.yaml
template_streamlit/: main.py
template_streamlit/app_pages/: home.py  page1.py
template_streamlit/static/: __init__.py
